samples/_failures_safe/1761332924_b948fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a99b6fa5.c: In function ‘main’:
./samples/SAFE/__tmp_a99b6fa5.c:198:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  198 |     int token
      |     ^~~
./samples/SAFE/__tmp_a99b6fa5.c:198:5: error: expected declaration or statement at end of input
